# sae

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  groupmax_bench.py  itda.py  itda_rep.py  kron_bench.py  monet_vs_transformer.py  prototyping.ipynb  pyproject.toml  requirements.txt  sparsify_launcher.py  test_pkm.py  train.py  tritest.py  xfog.py
sae/: __init__.py  __main__.py  analytic.py  checkpointing.py  config.py  data.py  hooked_model.py  kernels.py  optim.py  pretrained.py  pretrained_saes.yaml  sae.py  trainer.py  utils.py
sparsify/: __init__.py  __main__.py  config.py  data.py  itda.py  kernels.py  monet.py  muon.py  reorg.py  sae.py  sparse_coder.py  trainer.py  utils.py  xformers.py  xformers_decoder.py
tests/: test_chunk_and_tokenize.py  test_decode.py
